fixed sidenav issue on iphone

--- a/style.css
+++ b/style.css
@@ -62,8 +62,8 @@ p {
 .sidenav {
   height: 100%;
   width: 0;
-  position: fixed;
-  z-index: 1;
+  position: absolute;
+  z-index: 20;
   top: 0;
   right: 0;
   background-color: #111;
@@ -271,7 +271,7 @@ footer > .footer-contact {
     display: block;
   }
 
-  #navbar .closebtn {
+  .sidenav .closebtn {
     position: absolute;
     top: 0;
     right: 25px;
@@ -279,7 +279,7 @@ footer > .footer-contact {
     margin-left: 50px;
   }
 
-  #navbar .sidenav a {
+  .sidenav a {
     padding: 8px 8px 8px 32px;
     font-size: 25px;
     display: block;
